--- a/css/styles.css
+++ b/css/styles.css
@@ -112,6 +112,13 @@ ul {
 .header-container {
   display: flex;
 }
+@media only screen and (min-width: 1158px) {
+  .header-container {
+    padding-left: 156px;
+    padding-right: 156px;
+  }
+}
+
 .nav {
   display: flex;
   align-items: center;
@@ -119,7 +126,9 @@ ul {
 
 .logo-main-link {
   display: flex;
-  margin-right: 76px;
+  margin: 24px auto 22px 16px;
+
+  /* margin-right: 249px; */
   font-weight: 800;
   font-size: 18px;
   line-height: 1.17;
@@ -128,6 +137,16 @@ ul {
   text-transform: uppercase;
   font-family: "Raleway", sans-serif;
   color: #4d5ae5;
+}
+@media only screen and (min-width: 1158px) {
+  .logo-main-link {
+    margin-right: 76px;
+  }
+}
+@media only screen and (min-width: 768px) {
+  .logo-main-link {
+    margin-right: 120px;
+  }
 }
 
 .header-logo-accent {
@@ -195,22 +214,38 @@ ul {
 
 .contact-list {
   display: flex;
+  gap: 40px;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--main-txt-color);
 }
-.contact-item {
-  gap: 40px;
+@media only screen and (min-width: 768px) {
+  .contact-list {
+    flex-wrap: wrap;
+    gap: 12px;
+  }
 }
+/* .contact-item {
+  gap: 40px;
+} */
 
 .contact-link {
-  display: block;
   padding: 24px 0;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--main-txt-color);
+}
+@media only screen and (min-width: 768px) {
+  .contact-link {
+    padding: 16px 16px 16px auto;
+  }
+}
+@media only screen and (min-width: 1158px) {
+  .contact-link {
+    display: block;
+  }
 }
 
 /**
@@ -219,14 +254,15 @@ ul {
   |============================
 */
 .menu-toggle {
-  min-height: 40px;
-  min-width: 40px;
+  min-height: 22px;
+  min-width: 32px;
   display: flex;
   align-items: center;
   justify-content: center;
 
-  margin: 0;
-  margin-left: auto;
+  margin: 24px 16px 24px auto;
+  /* margin-left: auto; */
+
   padding: 0;
   background-color: transparent;
   cursor: pointer;
