--- a/css/styles.css
+++ b/css/styles.css
@@ -109,13 +109,10 @@ ul {
   box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
-.header-container {
-  display: flex;
-}
-@media only screen and (min-width: 1158px) {
+
+@media only screen and (min-width: 768px) {
   .header-container {
-    padding-left: 156px;
-    padding-right: 156px;
+    display: flex;
   }
 }
 
@@ -127,8 +124,6 @@ ul {
 .logo-main-link {
   display: flex;
   margin: 24px auto 22px 16px;
-
-  /* margin-right: 249px; */
   font-weight: 800;
   font-size: 18px;
   line-height: 1.17;
@@ -138,14 +133,15 @@ ul {
   font-family: "Raleway", sans-serif;
   color: #4d5ae5;
 }
-@media only screen and (min-width: 1158px) {
-  .logo-main-link {
-    margin-right: 76px;
-  }
-}
 @media only screen and (min-width: 768px) {
   .logo-main-link {
     margin-right: 120px;
+  }
+}
+
+@media only screen and (min-width: 1158px) {
+  .logo-main-link {
+    margin-right: 76px;
   }
 }
 
@@ -222,13 +218,14 @@ ul {
 }
 @media only screen and (min-width: 768px) {
   .contact-list {
+    font-size: 12px;
+    margin: 16px 0 16px 0;
     flex-wrap: wrap;
+    align-items: center;
+    justify-content: flex-end;
     gap: 12px;
   }
 }
-/* .contact-item {
-  gap: 40px;
-} */
 
 .contact-link {
   padding: 24px 0;
@@ -261,7 +258,7 @@ ul {
   justify-content: center;
 
   margin: 24px 16px 24px auto;
-  /* margin-left: auto; */
+  margin-left: auto;
 
   padding: 0;
   background-color: transparent;
@@ -288,8 +285,11 @@ ul {
   left: 0;
   width: 100vw;
   height: 100vh;
-  padding: 32px;
-  background-color: #3f51b5;
+
+  display: flex;
+  flex-direction: column;
+  padding: 80px 35px 40px 40px;
+  background-color: var(--light-color);
   z-index: 999;
 
   transform: translateX(100%);
@@ -304,18 +304,60 @@ ul {
   position: absolute;
   top: 16px;
   right: 16px;
-  color: #fff;
 }
+
+/* .mobile-active {
+  color: #404bbf;
+} */
+
+.mobile-contacts {
+  display: flex;
+  flex-wrap: wrap;
+  row-gap: 40px;
+  margin-bottom: 48px;
+}
+.mobile-tel {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  text-align: center;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: var(--color-portfolio);
+}
+.mobile-mailto {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #434455;
+}
+
+.mobile-socials {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 56px;
+}
+
 .mobile-menu {
   padding: 0;
   margin: 0;
-  list-style: none;
+  margin-bottom: auto;
+}
+.mobile-menu-item:not(:last-child) {
+  margin-bottom: 40px;
 }
 
-.mobile-menu .link {
+.mobile-menu .mobile-link {
   display: block;
   padding: 10px;
-  color: #fff;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11px;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: var(--secondary-txt-color);
   text-decoration: none;
 }
 
@@ -325,7 +367,7 @@ ul {
   |============================
 */
 
-/* .hero {
+.hero {
   padding: 188px 0;
   margin-left: auto;
   margin-right: auto;
@@ -381,7 +423,7 @@ ul {
 .hero-button:focus {
   color: var(--background-portfolio-btn);
   background-color: var(--background-icons-social);
-} */
+}
 
 /**
   |============================
@@ -716,6 +758,13 @@ ul {
   padding: 96px 0;
   background: #2e2f42;
 }
+
+@media only screen and (min-width: 768px) {
+  .footer {
+    padding-left: 108px;
+  }
+}
+
 @media only screen and (min-width: 1158px) {
   .footer {
     padding: 100px 0;
@@ -730,6 +779,17 @@ ul {
   column-gap: 24px;
   align-items: baseline;
 }
+@media only screen and (min-width: 768px) {
+  .footer-container {
+    justify-content: flex-start;
+  }
+}
+
+@media only screen and (max-width: 767px) {
+  .footer-container-logo {
+    text-align: center;
+  }
+}
 @media only screen and (min-width: 1158px) {
   .footer-container-logo {
     margin-right: 120px;
@@ -739,16 +799,19 @@ ul {
 .footer-link {
   display: inline-block;
   margin-bottom: 16px;
-  margin-left: auto;
-  margin-right: auto;
   font-weight: 800;
   font-size: 18px;
   line-height: 1.17;
-
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #4d5ae5;
   font-family: "Raleway", sans-serif;
+}
+
+@media only screen and (max-width: 767px) {
+  .footer-link {
+    text-align: center;
+  }
 }
 .logo-accent {
   font-family: var(--secondary-font);
@@ -762,6 +825,11 @@ ul {
   letter-spacing: 0.02em;
   color: #f4f4fd;
 }
+@media only screen and (max-width: 767px) {
+  .footer-text {
+    text-align: start;
+  }
+}
 .footer-social-container {
   display: inline-block;
   justify-content: center;
@@ -769,15 +837,19 @@ ul {
   min-width: 208px;
 }
 .footer-social-text {
-  display: inline-block;
   margin-bottom: 16px;
-
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--light-color);
 }
+@media only screen and (max-width: 767px) {
+  .footer-social-text {
+    text-align: center;
+  }
+}
+
 .footer-social-list {
   display: flex;
   justify-content: center;
@@ -802,10 +874,6 @@ ul {
 }
 @media only screen and (max-width: 767px) {
   .footer-form-container {
-    display: flex;
-    flex-wrap: wrap;
-    row-gap: 16px;
-    margin-left: auto;
     max-width: 398px;
   }
 }
@@ -836,6 +904,15 @@ ul {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     outline-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+@media only screen and (max-width: 767px) {
+  .footer-label {
+    width: 100%;
+  }
+  .footer-field {
+    width: 100%;
+  }
+}
+
 .footer-field:focus {
   outline-color: var(--light-color);
   background-color: var(--secondary-txt-color);
