--- a/css/styles.css
+++ b/css/styles.css
@@ -306,9 +306,9 @@ ul {
   right: 16px;
 }
 
-/* .mobile-active {
-  color: #404bbf;
-} */
+.mobile-link.active {
+  color: var(--background-icons-social);
+}
 
 .mobile-contacts {
   display: flex;
@@ -360,6 +360,17 @@ ul {
   color: var(--secondary-txt-color);
   text-decoration: none;
 }
+.mobile-studio-link {
+  display: block;
+  padding: 10px;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11px;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  text-decoration: none;
+  color: var(--background-icons-social);
+}
 
 /**
   |============================
@@ -368,32 +379,113 @@ ul {
 */
 
 .hero {
-  padding: 188px 0;
+  padding: 112px 0;
   margin-left: auto;
   margin-right: auto;
   text-align: center;
-  max-width: 1440px;
+  max-width: 767px;
   background: #2e2f42;
   background-image: linear-gradient(
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url(../images/hero/people-office.jpg);
+    url(../images/hero/mob-people-1@1x.png);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
 }
+@media (min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+   {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/hero/mob-people-1@2x.png);
+  }
+}
+
+@media only screen and (min-width: 429px) {
+  .hero {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/hero/tab-people-1@1x.png);
+  }
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+     {
+      background-image: linear-gradient(
+          rgba(46, 47, 66, 0.7),
+          rgba(46, 47, 66, 0.7)
+        ),
+        url(../images/hero/tab-people-1@2x.png);
+    }
+  }
+}
+@media only screen and (min-width: 769px) {
+  .hero {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/hero/desk-people-1@1x.png);
+  }
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+     {
+      background-image: linear-gradient(
+          rgba(46, 47, 66, 0.7),
+          rgba(46, 47, 66, 0.7)
+        ),
+        url(../images/hero/desk-people-1@2x.png);
+    }
+  }
+}
+@media only screen and (min-width: 768px) {
+  .hero {
+    max-width: 1157px;
+  }
+}
+@media only screen and (min-width: 1158px) {
+  .hero {
+    padding: 188px 0;
+    max-width: 1440px;
+  }
+}
 
 .hero-title {
-  margin: 0 auto;
+  display: inline-block;
   max-width: 496px;
-  padding-bottom: 48px;
+  padding-bottom: 72px;
   font-weight: 700;
   font-size: 56px;
   line-height: 1.07;
   text-align: center;
   letter-spacing: 0.02em;
   color: var(--light-color);
+}
+@media only screen and (max-width: 767px) {
+  .hero-title {
+    max-width: 320px;
+    font-size: 36px;
+    line-height: 1.11;
+    text-transform: capitalize;
+  }
+}
+@media only screen and (min-width: 768px) {
+  .hero-title {
+    padding-bottom: 36px;
+  }
+}
+@media only screen and (min-width: 1158px) {
+  .hero-title {
+    padding-bottom: 48px;
+  }
 }
 
 .hero-button {
@@ -403,13 +495,10 @@ ul {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
-  align-items: center;
   letter-spacing: 0.04em;
   color: var(--light-color);
   min-width: 169px;
   height: 56px;
-  left: 636px;
-  top: 428px;
   background: #4d5ae5;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
@@ -512,7 +601,7 @@ ul {
   letter-spacing: 0.02em;
   color: var(--main-txt-color);
 }
-@media only screen and (min-width: minwidthpx) {
+@media only screen and (min-width: 1158px) {
   .about-text {
     font-weight: 400;
   }
@@ -723,6 +812,11 @@ ul {
   height: 88px;
   border-radius: 4px;
 }
+@media only screen and (max-width: 767px) {
+  .customers-item {
+    width: 190px;
+  }
+}
 .customers-link {
   display: flex;
   justify-content: center;
@@ -881,6 +975,11 @@ ul {
 @media only screen and (min-width: 768px) {
   .footer-form-container {
     min-width: 453px;
+  }
+}
+@media only screen and (min-width: 1158px) {
+  .footer-form-container {
+    margin-left: auto;
   }
 }
 
@@ -1080,6 +1179,11 @@ ul {
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media only screen and (max-width: 767px) {
+  .modal {
+    width: 392px;
+  }
 }
 .modal-close-btn {
   position: absolute;
