--- a/css/styles.css
+++ b/css/styles.css
@@ -236,7 +236,7 @@ ul {
 }
 @media only screen and (min-width: 768px) {
   .contact-link {
-    padding: 16px 16px 16px auto;
+    padding: 16px 16px 16px 0;
   }
 }
 @media only screen and (min-width: 1158px) {
@@ -383,7 +383,7 @@ ul {
   margin-left: auto;
   margin-right: auto;
   text-align: center;
-  max-width: 767px;
+  max-width: 1440px;
   background: #2e2f42;
   background-image: linear-gradient(
       rgba(46, 47, 66, 0.7),
@@ -397,12 +397,12 @@ ul {
 @media (min-device-pixel-ratio: 2),
   (min-resolution: 192dpi),
   (min-resolution: 2dppx) {
-   {
+  .hero {
     background-image: linear-gradient(
         rgba(46, 47, 66, 0.7),
         rgba(46, 47, 66, 0.7)
       ),
-      url(../images/hero/mob-people-1@2x.png);
+      url(../images/hero/mob-people-2@2x.png);
   }
 }
 
@@ -417,12 +417,12 @@ ul {
   @media (min-device-pixel-ratio: 2),
     (min-resolution: 192dpi),
     (min-resolution: 2dppx) {
-     {
+    .hero {
       background-image: linear-gradient(
           rgba(46, 47, 66, 0.7),
           rgba(46, 47, 66, 0.7)
         ),
-        url(../images/hero/tab-people-1@2x.png);
+        url(../images/hero/tab-people-2@2x.png);
     }
   }
 }
@@ -437,24 +437,19 @@ ul {
   @media (min-device-pixel-ratio: 2),
     (min-resolution: 192dpi),
     (min-resolution: 2dppx) {
-     {
+    .hero {
       background-image: linear-gradient(
           rgba(46, 47, 66, 0.7),
           rgba(46, 47, 66, 0.7)
         ),
-        url(../images/hero/desk-people-1@2x.png);
+        url(../images/hero/desk-people-2@2x.png);
     }
   }
 }
-@media only screen and (min-width: 768px) {
-  .hero {
-    max-width: 1157px;
-  }
-}
+
 @media only screen and (min-width: 1158px) {
   .hero {
     padding: 188px 0;
-    max-width: 1440px;
   }
 }
 
@@ -1063,89 +1058,6 @@ ul {
 
 /**
   |============================
-  | Portfolio style
-  |============================
-*/
-
-/**
-  |============================
-  | Header section style
-  |============================
-*/
-
-/* .page-header {
-  border-bottom: 1px solid #e7e9fc;
-  display: flex;
-  box-shadow: 0px, 1px rgba(46, 47, 66, 0.08);
-}
-
-.nav {
-  display: flex;
-}
-
-.logo-main-link {
-  margin-right: 76px;
-  font-weight: 800;
-  font-size: 18px;
-  line-height: 1.17;
-  display: flex;
-  align-items: center;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  font-family: "Raleway", sans-serif;
-  color: #4d5ae5;
-}
-
-.header-logo-accent {
-  font-weight: 800;
-  font-size: 18px;
-  line-height: 1.17;
-  display: flex;
-  align-items: center;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  font-family: var(--secondary-font);
-  color: var(--secondary-txt-color);
-}
-
-.nav-list {
-  display: flex;
-  gap: 40px;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: var(--secondary-txt-color);
-}
-
-.contact {
-  font-style: normal;
-}
-
-.contact-list {
-  gap: 40px;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: var(--main-txt-color);
-}
-
-.contact-link {
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: var(--main-txt-color);
-  transition-property: color;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-.contact-link:hover,
-.contact-link:focus {
-  color: #404bbf;
-} */
-
-/**
-  |============================
   | Modal window
   |============================
 */
@@ -1372,6 +1284,89 @@ ul {
 
 /**
   |============================
+  | Portfolio style
+  |============================
+*/
+
+/**
+  |============================
+  | Header section style
+  |============================
+*/
+
+/* .page-header {
+  border-bottom: 1px solid #e7e9fc;
+  display: flex;
+  box-shadow: 0px, 1px rgba(46, 47, 66, 0.08);
+}
+
+.nav {
+  display: flex;
+}
+
+.logo-main-link {
+  margin-right: 76px;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 1.17;
+  display: flex;
+  align-items: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  font-family: "Raleway", sans-serif;
+  color: #4d5ae5;
+}
+
+.header-logo-accent {
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 1.17;
+  display: flex;
+  align-items: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  font-family: var(--secondary-font);
+  color: var(--secondary-txt-color);
+}
+
+.nav-list {
+  display: flex;
+  gap: 40px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--secondary-txt-color);
+}
+
+.contact {
+  font-style: normal;
+}
+
+.contact-list {
+  gap: 40px;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--main-txt-color);
+}
+
+.contact-link {
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--main-txt-color);
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.contact-link:hover,
+.contact-link:focus {
+  color: #404bbf;
+} */
+
+/**
+  |============================
   | Portfolio section style
   |============================
 */
@@ -1469,7 +1464,7 @@ ul {
   |============================
 */
 
-.overlay-text {
+/* .overlay-text {
   position: absolute;
   padding: 40px 32px;
   width: 100%;
@@ -1499,7 +1494,7 @@ ul {
   padding: 32px 16px;
   border: 1px solid #e7e9fc;
   border-top: none;
-}
+} */
 
 /**
   |============================
